# MutiAgentUI

./: README.md  final_code.md  pyproject.toml  report.md
knowledge/: Business-UI.csv  Verb-UI.csv  frontend_components.json  user_preference.txt
output/frontend_project/: package-lock.json  package.json  tailwind.config.js
output/frontend_project/public/: index.html
output/frontend_project/src/: App.jsx  index.css
output/frontend_project/src/components/: Button.jsx  CheckboxGroup.jsx  InputField.jsx  PasswordStrength.jsx  SelectField.jsx  Toast.jsx  VerificationCode.jsx
output/frontend_project/src/pages/: RegistrationPage.jsx
output/frontend_project_20251124_164505/: package.json  tailwind.config.js
output/frontend_project_20251124_164505/src/components/: Button.jsx  Checkbox.jsx  InputField.jsx  Notification.jsx  RadioGroup.jsx  SelectField.jsx
output/frontend_project_20251124_164913/src/pages/: DashboardPage.jsx  LoginPage.jsx  ProfilePage.jsx  RegistrationPage.jsx
output/frontend_project_20251124_165110/src/: App.jsx
output/frontend_project_20251124_165110/src/pages/: SearchPage.jsx  SettingsPage.jsx
src/test1/: crew.py  input_config.json  main.py
src/test1/config/: agents.yaml  tasks.yaml
src/test1/tools/: project_saver_tool.py
